--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "server":"nodemon server.js",
+    "server": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
@@ -19,6 +19,7 @@
     "express": "^4.21.2",
     "mongoose": "^8.10.1",
     "multer": "^1.4.5-lts.1",
+    "razorpay": "^2.9.6",
     "stripe": "^17.7.0",
     "svix": "^1.42.0"
   }
